--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Imbue:opsz,wght@10..100,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +11,48 @@
 </head>
 <body>
 <header>
-    <div class="headerTop"> header top</div>
-    <div class="headerBottom">header bottom</div>
+    <div class="headerTop">
+<div class="leftHeaderLinks">
+<h1>logo</h1>
+</div>
+<div class="rightHeaderLinks"> 
+<div>
+    <a href="">link one</a>
+</div>
+<div>
+    <a href=""> link two</a>
+</div>    
+<div>
+    <a href=""> link three</a>
+
+</div>
+
+</div>
+
+    </div>
+    <div class="headerBottom">
+        <div class="goldLinks"> 
+        <div>
+            <a href="">link1</a>
+        </div>
+        <div>
+            <a href="">link2</a>
+        </div>
+        <div>
+            <a href="">link3</a>
+        </div>
+        <div>
+            <a href="">link4</a>
+        </div>
+        <div>
+            <a href="">link5</a>
+        </div>
+        <div>
+            <a href="">link6</a>
+        </div>
+        </div>
+
+    </div>
 </header>
 
 
@@ -19,12 +62,14 @@
     <div class="middle">
         <div class="container">
             <div class="image">
-            
+            <img src="https://tse3.mm.bing.net/th?id=OIP.8FNQdwfP7rOEfjrdBvBFCgHaEK&pid=Api&P=0&h=220" alt="sample">
             </div>
             <div class="text">
-            <h1>This is what dreams are made of
+            <h1 class="smooshTop"> Simple webpage
             </h1>
-            <p> this is some cool descriptive text</p>
+            <p class="smooshTop"> A few words about your page 
+
+            </p>
             <a target="_blank"> Cool link button</a>
             </div>
         </div>
@@ -34,13 +79,13 @@
 
 <div class="secondBodyLeft">
     <div class="imgContainer">
-
+        <img src="https://tse3.mm.bing.net/th?id=OIP.8FNQdwfP7rOEfjrdBvBFCgHaEK&pid=Api&P=0&h=220" alt="sample">
     </div>
 
 </div>
 <div class="secondBodyRight">
 
-    <h3> some cool header text</h3>
+    <h3> Cool Header Text</h3>
     <p> this is a long paragraph talkking
         all about whatever you want it too oooo isnt
         it so cool??
